default.css
body 
{
  background-color: #232323;
}

#terminal
{
  position: absolute;
  height: 100%;
  width: 100%;

  background-color: #0A0A0A;
  
  font-weight: lighter;
  font-size: 100%;
  font-family: 'Inconsolata', monospace;

  padding-left: 10px;
  padding-right: 10px;

  overflow: auto;
}

#terminal a
{
  color: #3271A7
}

#terminal a:hover
{
  color: #888;
}

[contenteditable="true"]:focus
{
    outline: none;
}

#input, #pastInput
{
  min-width: 20px;
  max-width: 100%;
  color: #ededed;
  display: inline-block;
}

#input br, #pastInput br
{
  display: none;
}

